Сделал filestore и дополнил api-gateway.
